--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,13 +91,10 @@ jobs:
         cp build/$MINIFORGE_NAME-*-$OS_NAME-$ARCH.sh build/$MINIFORGE_NAME-$OS_NAME-$ARCH.sh
         ls -alh build
 
-    - name: Upload miniforge to release
-      uses: svenstaro/upload-release-action@2.2.0
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: build/Miniforge*
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
-        prerelease: true
+    - name: Upload Release Asset
+      uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: build/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
